--- a/index.html
+++ b/index.html
@@ -73,5 +73,62 @@
         </div>
       </div>
     </section>
+    <section class="benefits">
+      <div class="benefits__inner">
+        <h2 class="benefits__title">Benefit both ways - monthly or yearly</h2>
+        <ul class="benefits__list">
+          <li class="benefits__list-item">
+            <div class="benefits__list-item-discount">50%</div>
+            <div class="benefits__list-item-content">
+              <h3 class="benefits__list-item-title">Monthly</h3>
+              <div>
+                <s>$4.99</s>
+                <b>$2.49</b>
+                <div>per user/month</div>
+                <ul class="benefits__list-item-list">
+                  <li>14-day Free Trial</li>
+                  <li>Access to All Features</li>
+                  <li>24/7 Support</li>
+                </ul>
+                <button class="benefits__list-item-button">
+                  GET YOUR DEAL
+                </button>
+                <div class="benefits__list-item-extra">*for 6 months</div>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="benefits__inner">
+        <ul class="benefits__list">
+          <li class="benefits__list-item">
+            <div class="benefits__list-item-discount">
+              <b>
+                18+%
+                <br />
+                +50%
+              </b>
+            </div>
+            <div class="benefits__list-item-content">
+              <h3 class="benefits__list-item-title_1">Monthly</h3>
+              <div>
+                <s>$4.09</s>
+                <b>$2.05</b>
+                <div>per user/month</div>
+                <ul class="benefits__list-item-list">
+                  <li>14-day Free Trial</li>
+                  <li>Access to All Features</li>
+                  <li>24/7 Support</li>
+                </ul>
+                <button class="benefits__list-item-button">
+                  GET YOUR DEAL
+                </button>
+                <div class="benefits__list-item-extra">*for 6 months</div>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
   </body>
 </html>
